# vectis-plugins-template

./: .env.example  Cargo.toml  README.md  justfile
contracts/plugin/: Cargo.toml
contracts/plugin/src/: contract.rs
