[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
name = "vectis-plugins-template"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nymlab/vectis-plugins-template"
keywords = [ "Vectis", "CosmWasm", "smart-contract-wallet"]

[workspace.dependencies]
cosmwasm-schema = "1.2"
cw-storage-plus = "1.1"
cosmwasm-std = "1.2"
cw2 = "1.0"
thiserror = "1"

[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
